more strucute changes for the site

--- a/portf.html
+++ b/portf.html
@@ -1,99 +1,156 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>MY PORTFOLIO</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/content/css/styles.css" />
-</head>
-<body>
-	<header class="head">
-		<div1 class="navigation">
-				<ul class="ul">
-			  	  <li><a href="#Home"><strong>Home</strong></a></li>
-				  <li><a href="#blogs"><strong>Blogs</strong></a></li>
-				  <li><a href="#skill"><strong>Skill</strong></a></li>
-				  <li><a href="#resume"><strong>Resume</strong></a></li>
-				   <li><a href="#contact"><strong>Contact</strong></a></li>
-				  <li><a href="#about"><strong>About</strong></a></li>
-				  <li><a href="#feedback"><strong>Feedback</strong></a></li>
-				</ul>
-	</div1>
-		<h1 class="web1">WEB DEVELOPER</h1>
-		<img src="https://lh3.googleusercontent.com/-z7npO6j_l20/XPOUiLXHQPI/AAAAAAAACMM/031gVRS3hr0bZMiTMVzKF_MwC4JAo_2zQCEwYBhgL/w140-h140-p/20190306_121809_2.jpg" title="ThaKur PriNce KuMar ShaRma">
-		<div class="f">
-			<a href="https://www.facebook.com/profile.php?id=100008002292716"><i class="fa fa-facebook-square" title="facebook" style="font-size: 48px;color:white"></i></a>
-			<a href="https://www.instagram.com/cool_boy_pk/?hl=en"><i class="fa fa-instagram" title="instagram" style="font-size: 48px;color:red"></i></a>
-			<a href="https://github.com/prince21298"><i class="fa fa-github "title="githhub" style="font-size: 48px;color:black"></i></a>
-			<a href="https://mail.google.com/mail/u/0/?ogbl#inbox"><i class="fa fa-envelope-o" title="Gmail" style="font-size: 48px;color:yellow"></i></a>
-			<a href="https://www.linkedin.com/in/thakur-prince-kumar-sharma-6ab420175/"><i class="fa fa-linkedin-square" title="Linkdin" style="font-size: 48px;color:DodgerBlue"></i></i></a>	
-		</div>
-	</header>
-	<footer>
-		<div class="main_div">
-			<table style="width:60%">
+  <head>
+    <title>MY PORTFOLIO</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="/content/css/styles.css" />
+  </head>
+  <body>
+    <header class="head">
+      <div class="navigation">
+        <ul class="ul">
+          <li>
+            <a href="/"><strong>Home</strong></a>
+          </li>
+          <li>
+            <a hre="/Pages/About.html"><strong>About</strong></a>
+          </li>
+          <li>
+            <a href="/Pages/skills.html"><strong>Skill</strong></a>
+          </li>
+          <li>
+            <a href="/pages/Resume.html"><strong>Resume</strong></a>
+          </li>
+          <li>
+            <a href="/Pages//blog.html"><strong>Blogs</strong></a>
+          </li>
 
-			  	<tr>
-			    <td><strong>Gmail ID:</strong> :</td>
-			    <td>princekumar1837@gamil.com, prince18@navgurukul.org</td>
-				</tr>
-				<tr>
-				<td><strong>Address:</strong></td>
-				<td>Salarpur Khadar(Gautam-budh-nagar) , Sector 102, Noida, Uttar Pradesh 201304</td>
-				<tr>
-				<td><strong>Mobile No...:</strong> :</td>
-				<td>8210739077,9717707630</td>
-				</tr>
-
-			</table>
-		</div>
-		 <div class="about-section">
-  <h1>About Us Page</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
-</div>
-
-<h2 style="text-align:center">Our Team</h2>
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-      <div class="container">
-        <h2>Jane Doe</h2>
-        <p class="title">CEO & Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>jane@example.com</p>
-        <p><button class="button">Contact</button></p>
+          <li>
+            <a href="/Pages/Feedback.html"><strong>Feedback</strong></a>
+          </li>
+          <li>
+            <a href="/pages/Contact.html"><strong>Contact</strong></a>
+          </li>
+        </ul>
       </div>
-    </div>
-  </div>
-
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
-      <div class="container">
-        <h2>Mike Ross</h2>
-        <p class="title">Art Director</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>mike@example.com</p>
-        <p><button class="button">Contact</button></p>
+      <h1 class="web1">WEB DEVELOPER</h1>
+      <img
+        src="https://lh3.googleusercontent.com/-z7npO6j_l20/XPOUiLXHQPI/AAAAAAAACMM/031gVRS3hr0bZMiTMVzKF_MwC4JAo_2zQCEwYBhgL/w140-h140-p/20190306_121809_2.jpg"
+        title="ThaKur PriNce KuMar ShaRma"
+      />
+      <div class="f">
+        <a href="https://www.facebook.com/profile.php?id=100008002292716"
+          ><i
+            class="fa fa-facebook-square"
+            title="facebook"
+            style="font-size: 48px; color: white"
+          ></i
+        ></a>
+        <a href="https://www.instagram.com/cool_boy_pk/?hl=en"
+          ><i
+            class="fa fa-instagram"
+            title="instagram"
+            style="font-size: 48px; color: red"
+          ></i
+        ></a>
+        <a href="https://github.com/prince21298"
+          ><i
+            class="fa fa-github"
+            title="githhub"
+            style="font-size: 48px; color: black"
+          ></i
+        ></a>
+        <a href="https://mail.google.com/mail/u/0/?ogbl#inbox"
+          ><i
+            class="fa fa-envelope-o"
+            title="Gmail"
+            style="font-size: 48px; color: yellow"
+          ></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/thakur-prince-kumar-sharma-6ab420175/"
+          ><i
+            class="fa fa-linkedin-square"
+            title="Linkdin"
+            style="font-size: 48px; color: DodgerBlue"
+          ></i
+        ></a>
       </div>
-    </div>
-  </div>
+    </header>
+    <footer>
+      <div class="main_div">
+        <table style="width: 60%">
+          <tr>
+            <td><strong>Gmail ID:</strong> :</td>
+            <td>princekumar1837@gamil.com, prince18@navgurukul.org</td>
+          </tr>
+          <tr>
+            <td><strong>Address:</strong></td>
+            <td>
+              Salarpur Khadar(Gautam-budh-nagar) , Sector 102, Noida, Uttar
+              Pradesh 201304
+            </td>
+          </tr>
 
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
-      <div class="container">
-        <h2>John Doe</h2>
-        <p class="title">Designer</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>john@example.com</p>
-        <p><button class="button">Contact</button></p>
+          <tr>
+            <td><strong>Mobile No...:</strong> :</td>
+            <td>8210739077,9717707630</td>
+          </tr>
+        </table>
       </div>
-    </div>
-  </div>
-</div> 
-	</footer>
+      <div class="about-section">
+        <h1>About Us Page</h1>
+        <p>Some text about who we are and what we do.</p>
+        <p>
+          Resize the browser window to see that this page is responsive by the
+          way.
+        </p>
+      </div>
 
-</body>
+      <h2 style="text-align: center">Our Team</h2>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="/w3images/team1.jpg" alt="Jane" style="width: 100%" />
+            <div class="container">
+              <h2>Jane Doe</h2>
+              <p class="title">CEO & Founder</p>
+              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>jane@example.com</p>
+              <p><button class="button">Contact</button></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <img src="/w3images/team2.jpg" alt="Mike" style="width: 100%" />
+            <div class="container">
+              <h2>Mike Ross</h2>
+              <p class="title">Art Director</p>
+              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>mike@example.com</p>
+              <p><button class="button">Contact</button></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <img src="/w3images/team3.jpg" alt="John" style="width: 100%" />
+            <div class="container">
+              <h2>John Doe</h2>
+              <p class="title">Designer</p>
+              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>john@example.com</p>
+              <p><button class="button">Contact</button></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
